# review_summary

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  claude-nightly.yml
app/: main.py
app/api/: deps.py
app/api/v1/: analytics.py  auth.py  reviews.py  router.py  summaries.py
app/core/: config.py  exceptions.py  security.py
app/dto/: __init__.py  analytics.py  review.py  summary.py  user.py
app/models/: review.py  summary.py  user.py
app/pages/: views.py
app/repositories/: __init__.py  base.py  review_repo.py  summary_repo.py  user_repo.py
app/services/: __init__.py  ai_service.py  analytics_service.py  review_service.py  summary_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  index.html
app/templates/analytics/: dashboard.html
app/templates/reviews/: create.html  list.html
app/templates/summaries/: detail.html
docker/: Dockerfile  Dockerfile.dev
scripts/: seed.py
supabase/migrations/: 001_initial_schema.sql
tests/: conftest.py
tests/integration/: test_dark_mode.py  test_review_api.py
tests/unit/: test_ai_service.py  test_dto.py  test_review_service.py
